<resources>
    <string name="app_name">MyKins</string>
    <string name="title_account">账号</string>
    <string name="title_password">密码</string>
    <string name="title_login">登 录</string>
    <string name="title_register">注 册</string>
    <string name="hint_phone_email">请输入电话/邮箱</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="title_forget_password">忘记密码</string>
    <string name="title_activity_login">Sign in</string>

    <string name="hint_register_password">请输入 6-12 位密码</string>
    <string name="hint_register_verify_code">请输入验证码</string>
    <string name="title_send_verify_code">获取验证码</string>
    <string name="error_invalid_account">请输入正确的电话/邮箱地址</string>
    <string name="error_invalid_password_zh">密码不能使用中文</string>
    <string name="error_invalid_verify">请输入验证码数字</string>
    <string name="title_register_protocal">《亲讯服务协议》</string>
    <string name="title_kin">亲</string>
    <string name="title_xun">讯</string>
    <string name="title_profile">我</string>
    <string name="title_contact">亲友录</string>
    <string name="title_kins_add">添加 亲友/群组</string>
    <string name="title_search">搜索</string>
    <string name="title_dis_kins">逝亲</string>
    <string name="title_adding_kins">设亲友圈</string>
    <string name="title_group_setting">设聊天群</string>
    <string name="title_new_kins">链接提示</string>
    <string name="title_empty">暂无内容</string>
    <string name="hint_search_kins">亲讯号／手机号</string>
    <string name="title_accept">接受</string>
    <string name="title_reject">拒绝</string>
    <string name="title_kins_new">新好友</string>
    <string name="title_kins_new_recommend">亲友提示</string>
    <string name="hint_search">搜索</string>
    <string name="title_search_project">指定搜索内容</string>
    <string name="title_search_share">分享</string>
    <string name="title_search_im">聊天</string>
    <string name="title_search_event">活动</string>
    <string name="title_diskins_add">填加逝亲</string>
    <string name="title_feed">亲&#160;&#160;&#160;&#160;&#160;&#160;&#160;讯</string>
    <string name="title_dashboard">汇总</string>
    <string name="title_setting">设置</string>
    <string name="title_scan_qr">扫码</string>
    <string name="title_statistics">统计</string>
    <string name="title_chat">聊天</string>
    <string name="title_kins_profile">亲友信息</string>
    <string name="title_profile_progress">资料完整度</string>
    <string name="title_appellation">称&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;谓</string>
    <string name="title_zodiac">生&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;肖</string>
    <string name="title_address">居&#160;&#160;住&#160;&#160;地</string>
    <string name="title_phone_num">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话</string>
    <string name="title_email_address">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱</string>
    <string name="title_mark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注</string>
    <string name="title_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="hint_second_name">请输入亲友的名</string>
    <string name="hint_first_name">请输入亲友的姓</string>
    <string name="error_empty">请输入内容</string>
    <string name="error_invalid_phone">请输入正确的电话号码</string>
    <string name="error_invalid_email">请输入正确的邮箱地址</string>
    <string name="title_save">保存</string>
    <string name="title_relations">关系定位</string>
    <string name="title_selection">请选择</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_mark">请输入备注</string>
    <string name="hint_phone">请输入电话</string>
    <string name="hint_address">请选择居住地</string>
    <string name="title_dis_kins_profile">逝亲信息</string>
    <string name="hint_kins_name">请输入亲友的姓名</string>
    <string name="hint_dis_kins_name">请输入逝亲的姓名</string>
    <string name="hint_dis_kins_address">请输入生前居住地</string>
    <string name="title_birthday">诞&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;辰</string>
    <string name="title_years_old">享&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;年</string>
    <string name="title_age">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;龄</string>
    <string name="title_gender">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="title_is_my">是我的</string>
    <string name="title_male">他</string>
    <string name="title_female">她</string>
    <string name="title_relation_selection">请选择关系</string>
    <string name="title_or">或</string>
    <string name="etitle_relation_input_name">请输入姓名</string>
    <string name="title_relation_def_father">父亲</string>
    <string name="title_relation_def_mother">母亲</string>
    <string name="title_relation_def_brother">弟弟</string>
    <string name="title_relation_def_brother_elder">哥哥</string>
    <string name="title_relation_def_sister">妹妹</string>
    <string name="title_relation_def_sister_elder">姐姐</string>
    <string name="title_relation_def_husband">丈夫</string>
    <string name="title_relation_def_wife">妻子</string>
    <string name="title_relation_def_son">儿子</string>
    <string name="title_relation_def_daughter">女儿</string>
    <string name="title_de">的</string>
    <string name="text_family_total">家谱总人数</string>
    <string name="count_family_total">%1$s人</string>
    <string name="text_skins_total">亲友录总人数</string>
    <string name="text_contected">已连接</string>
    <string name="text_mode_day_night">日夜模式</string>
    <string name="text_language_choose">语言选择</string>
    <string name="text_tips_voice">提示声</string>
    <string name="text_tips_shake">提示震动</string>
    <string name="text_privacy">隐私</string>
    <string name="text_reset_password">密码重置</string>
    <string name="day">日</string>
    <string name="night">夜</string>
    <string name="en">英</string>
    <string name="cn">中</string>
    <string name="tips_scan_add">扫一扫上面的二维码，加我好友</string>
    <string name="text_input_old_password">请输入旧密码</string>
    <string name="sure">确认</string>
    <string name="text_input_new_password">请输入新密码</string>
    <string name="title_privacy">隐私</string>
    <string name="text_blackened">被黑名单</string>
    <string name="title_kins_limit">亲友圈权限</string>
    <string name="title_set_kins">设定亲友圈</string>
    <string name="title_user_info">个人信息</string>
    <string name="text_addkin">添加亲友</string>
    <string name="text_address_now">所在地</string>
    <string name="text_add_remark">要不要给TA捎句话</string>
    <string name="no">不用了</string>
    <string name="text_pic_count">共%1$s张</string>
    <string name="text_keyword_search">关键词搜索</string>
    <string name="text_input_word">输入文字</string>
    <string name="text_share_round">分享范围</string>
    <string name="title_share_range">分享范围</string>
    <string name="title_activity_range">活动范围</string>
    <string name="title_publish">发布</string>
    <string name="text_input_activity_title">请输入活动标题</string>
    <string name="text_theme_pic">主题图片</string>
    <string name="text_activity_title">活动标题</string>
    <string name="text_input_activity_content">请输入活动内容</string>
    <string name="text_activity_content">活动内容</string>
    <string name="text_activity_time">活动时间</string>
    <string name="text_input_activity_time">年/月/日/时</string>
    <string name="text_activity_address">活动地点</string>
    <string name="text_input_activity_address">请输入活动地点</string>
    <string name="text_choose_need_reply">请选择是否需要回复</string>
    <string name="text_choose_need_stat">请选择是否需要统计参加人数</string>
    <string name="text_choose_need_money">请选择是否设定报名费用</string>
    <string name="text_activity_range">活动范围</string>
    <string name="done">完成</string>
    <string name="text_group_name">群名</string>
    <string name="text_input_group_name">请输入群名</string>
    <string name="reply">回复</string>
    <string name="sponsor">赞助</string>
    <string name="join">参&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;加</string>
    <string name="undetermined">待&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;定</string>
    <string name="dis_join">不&#160;&#160;参&#160;&#160;加</string>
    <string name="sex_choose">选择性别</string>
    <string name="age_choose">选择年龄</string>
    <string name="limit_200_word">200字</string>
    <string name="time_choose">时间选择</string>
    <string name="quit">退出</string>
    <string name="quit_group">退出群组</string>
    <string name="tips_quit_group">退出群组后，将不再接收此群聊消息</string>
    <string name="zodiac_choose">选择生肖</string>

    <string name="text_kins_tips">链接请求</string>
    <string name="title_input_relation_selection">请输入关系</string>
    <string name="cancel">取消</string>
    <string name="like">赞</string>
    <string name="comment">评</string>
    <string name="reward">赏</string>
    <string name="text_select_birthday">请输入生辰</string>
    <string name="text_select_die_day">请输入去世日期</string>
    <string name="title_register_and_agree">同意亲讯服务并注册</string>
    <string name="title_select_relation">请选择关系描述</string>
    <string name="title_select_birthday">请选择生日</string>
    <string name="title_publish_share">发布分享</string>
    <string name="title_publish_event">发布活动</string>

</resources>
