<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/statistics.toolbar"
        style="@style/Linkin_NavigationBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linkin.actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextAppearance="@style/Linkin_Toolbar_TitleText_Dark"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/kins.profile.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/title_kins_profile"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="@string/title_setting" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/white"
        android:paddingLeft="18dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_family_total"
            android:textColor="@color/color_253335" />

        <TextView
            android:id="@+id/tv_family_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/count_family_total"
            android:textColor="@color/color_253335" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/b1b1b1b1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/white"
        android:paddingLeft="18dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_skins_total"
            android:textColor="@color/color_253335" />

        <TextView
            android:id="@+id/tv_skins_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/count_family_total"
            android:textColor="@color/color_253335" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/b1b1b1b1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/text_contected"
            android:textColor="@color/color_7a7a7a" />

    </RelativeLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:background="@color/white" />

</LinearLayout>