<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:orientation="vertical">

    <EditText
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_add_remark"
        android:textColor="@color/color_313131"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="46dp"
            android:text="@string/no"
            android:background="@drawable/bg_remark_no"
            android:textColor="@color/color_335ca1"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/sure"
            android:background="@drawable/bg_remark_sure"
            android:textColor="@color/color_62c554"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>