<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile.reset.toolbar"
        style="@style/Linkin_NavigationBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linkin.actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStartWithNavigation="0dp"
        app:titleTextAppearance="@style/Linkin_Toolbar_TitleText_Dark"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/kins.profile.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_reset_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="@string/text_reset_password" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/text_input_old_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_ebebeb" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/text_input_new_password" />
    </LinearLayout>

    <Button
        android:id="@+id/profile.reset.btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_5c5c5c_bg"
        android:text="@string/sure"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>